Bulk Upload transcations
